# hadoucan-bootloader-fw

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  STM32H750VB_FLASH.ld  STM32H750VB_RAM.ld  Toolchain_stm32h750_atollic_flash.cmake  Toolchain_stm32h750_atollic_ram.cmake  Toolchain_stm32h750_gcc_flash.cmake  Toolchain_stm32h750_gcc_flash_semihosting.cmake  Toolchain_stm32h750_gcc_ram.cmake  generate_cmake.sh
.github/workflows/: build_ci.yml
include/: Fastboot.hpp  FreeRTOSConfig.h  W25Q16JV_app_region.hpp  bootloader_aes_gcm_key.hpp  config-no-entropy.h  global_inst.hpp  hal_inst.h  stm32h7xx_hal_conf.h  sw_ver.hpp  tusb_config.h  uart1_printf.hpp
include/tasks/: Bootloader_task.hpp  LED_task.hpp  Logging_task.hpp  USB_poll.hpp  USB_rx_buffer_task.hpp
scripts/: build_ci.sh  hadoucan-bootloader-fw-jlink.jflash
src/: Fastboot.cpp  bootloader_aes_gcm_key.cpp  freertos_new.cpp  freertos_stubs.cpp  global_inst.cpp  main.cpp  main_cube.c  stm32h7xx_hal_msp.c  stm32h7xx_it.c  sw_ver.cpp  syscalls.c  system_stm32h7xx.c  uart1_printf.cpp
src/tasks/: Bootloader_task.cpp  Bootloader_task.hpp  LED_task.cpp  LED_task.hpp  Logging_task.cpp  USB_poll.cpp  USB_poll.hpp  USB_rx_buffer_task.cpp  USB_rx_buffer_task.hpp  USB_tx_buffer_task.cpp  USB_tx_buffer_task.hpp
